src/app/modules/shared/components/public/public.component.css
/* ... */
.nav-connected {
	position: fixed;
	display: none;
	top: 24px;
	right: 120px;
	color: #fff;
	font-size: 22px;
	font-weight: 700;
	z-index: 9999;
}

.nav-connected:hover {
	text-decoration: none;
	color: #fff;
}

span.navbar-toggler-icon i {
	color: #fff;
	font-size: 28px;
	font-weight: 100;
}

#navbarSupportedContent {
	padding: 12px 30px;
}

.navbar-light .navbar-toggler {
	color: #fff;
	border-color: #fff;
	margin-right: 10px;
}

.navbar-toggler:focus,
.navbar-toggler:active,
.navbar-toggler-icon:focus {
	outline: none;
	box-shadow: none;
}

.basicNav-collapse .dropdown-menu.slideIn {
	margin-left: 45px;
	margin-top: 0;
	padding: 0;
	background-color: transparent;
	box-shadow: none;
}

.basicNav-collapse a.dropdown-item {
	color: #fff !important;
}

.basicNav-collapse a.dropdown-item:hover {
	color: #333 !important;
}

/*### Navbar User dropdown ###*/
.collapse.show .nav-link.dropdown-toggle img {
	margin-left: 0px;
}

a.dropdown-item {
	color: #fff;
	padding: 10px 20px;
}

.dropdown-item .btn-light {
	border: 1px solid #333;
}

.dropdown-menu.animate.slideIn {
	border: none;
	border-radius: 0;
	width: 240px;
	margin-top: 20px;
	right: -150px;
	padding: 0;
	background-color: #3f4040;
	z-index: 99999;
}

.animate {
	animation-duration: 0.3s;
	animation-fill-mode: both;
}

@keyframes slideIn {
	0% {
		transform: translateX(0);
	}
	100% {
		transform: translateX(-20px);
	}
}

.slideIn {
	animation-name: slideIn;
}

/*--- Medium/Small devices (I-pads, 768px, 500px, 400px) ---*/
@media (max-width: 991.98px) {
	.nav-connected {
		display: block;
	}

	.dropdown-menu.animate.slideIn {
		margin-top: 5px;
	}
}

@media (max-width: 768px) {
	.nav-connected {
		font-size: 20px;
		right: 90px;
	}

	.navbar-brand img.logo-main {
		padding-left: 5px;
	}
}

@media (max-width: 500px) {
	.navbar-brand img.logo-main {
		padding-left: 0px;
		width: 160px;
	}

	.nav-connected {
		display: none;
	}

	.navbar-brand {
		flex: none;
		display: inline-block;
		max-width: 160px;
	}

	.navbar-brand img {
		max-width: 160px;
	}
}

@media (max-width: 400px) {
	.navbar-toggler {
		font-size: 16px;
	}

	span.navbar-toggler-icon i {
		font-size: 24px;
	}

	li.user-nav-item.dropdown {
		right: 0;
	}

	li.user-nav-item .dropdown-menu.slideIn {
		margin-left: -50px;
	}
}

/*-------------------------------------------
	Hero Section Start
-------------------------------------------*/
.hero-section {
	background: url(/assets/images/img-top-hero-bg.png) no-repeat center;
	background-size: cover;
	margin-top: 73px;
	padding: 50px;
}
.hero-subtext h4 {
	color: #fff;
	font-weight: 900;
	font-size: 50px;
	margin-top: 6vw;
}

.hero-subtext h4.right {
	margin-left: 90px;
}

.hero-maintext h1 {
	margin-top: 9vw;
	margin-left: 130px;
	/*margin-bottom: 30px;*/
	color: #e2a90a;
	font-weight: 900;
	font-size: 90px;
}

.hero-maintext h1.right {
	margin-left: 180px;
}

.hero-button {
	font-size: 35px;
	font-weight: 700;
	padding: 10px 25px;
	border-width: 2px;
	border-radius: 5px;
}

.hero-dropdown {
	border: none;
	border-radius: 0;
	width: 150px;
	padding: 10px 0;
	background-color: #3f4040;
	z-index: 99999;
	animation-name: slideIn;
}

.hero-section .dropdown-menu {
	right: 0;
	left: unset !important;
	top: 75px !important;
}

.hero-section .dropdown-toggle::after {
	display: none !important;
}

/* Hero Section Large Devices*/
@media (max-width: 930px) {
	.hero-subtext h4 {
		font-size: 35px;
	}
	.hero-subtext h4.right {
		margin-left: 60px;
	}
	.hero-maintext h1 {
		font-size: 95px;
		margin-left: 90px;
	}
	.hero-maintext h1.right {
		margin-left: 120px;
	}
	.hero-button {
		font-size: 30px;
	}
	.hero-section .dropdown-menu {
		top: 67px !important;
	}
}

/* Hero Section Medium/SMall Devices*/
@media (max-width: 768px) {
	.hero-subtext h4 {
		font-size: 30px;
	}
	.hero-subtext h4.right {
		margin-left: 30px;
	}
	.hero-maintext {
		margin-top: 20px;
		margin-bottom: 40px;
	}
	.hero-maintext h1 {
		font-size: 65px;
		margin-left: 50px;
		margin-bottom: 10px;
	}
	.hero-maintext h1.right {
		margin-left: 70px;
	}
	.hero-button {
		font-size: 25px;
		padding: 10px 20px;
	}
	.hero-section .dropdown-menu {
		top: 60px !important;
	}
}

@media (max-width: 550px) {
	.hero-subtext h4 {
		font-size: 25px;
	}
	.hero-subtext h4.right {
		margin-left: 30px;
	}
	.hero-maintext h1 {
		font-size: 55px;
		margin-left: 0;
	}
	.hero-maintext h1.right {
		margin-left: 30px;
	}
	.hero-button {
		font-size: 20px;
	}
	.hero-section .dropdown-menu {
		top: 53px !important;
	}
}

@media (max-width: 500px) {
	.hero-section {
		margin-top: 64px;
	}
}

@media (max-width: 440px) {
	.hero-section {
		padding: 50px 30px;
	}
	.hero-subtext h4 {
		font-size: 20px;
	}
	.hero-subtext h4.right {
		margin-left: 30px;
	}
	.hero-maintext {
		margin-top: 15px;
		margin-bottom: 20px;
	}
	.hero-maintext h1 {
		font-size: 42px;
	}
	.hero-maintext h1.right {
		margin-left: 30px;
	}
	.hero-button {
		font-size: 16px;
		padding: 7px;
	}
	.hero-section .dropdown-menu {
		top: 41px !important;
		right: -20px;
		padding: 0;
	}
}

@media (max-width: 320px) {
	.hero-subtext h4 {
		font-size: 18px;
	}
	.hero-subtext h4.right {
		margin-left: 20px;
	}
	.hero-maintext h1 {
		font-size: 38px;
	}
	.hero-maintext h1.right {
		margin-left: 20px;
	}
	.hero-button {
		font-size: 16px;
	}
}


.index-hero-video {
	position: relative;
	background: none;
}

.index-hero-video iframe {
	position: absolute;
	top: 50%;
	left: 50%;
	width: 100%;
	height: 100%;
	transform: translate(-50%, -50%);
	z-index: -1;
}

.jumbotron {
	position: relative;
	overflow: hidden;
	background-color:black;
  }

  .jumbotron video {
	position: absolute;
	z-index: 1;
	top: 0;
	width:100%;
	height:100%;
	object-fit: cover;
	opacity:0.5;
  }

  .jumbotron .container {
	z-index: 2;
	position: relative;
  }
/* ... */

